[package]
name = "condition-assigner"
version = "0.1.0"
authors = ["Connor Onweller <onweller@udel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
